[gd_scene load_steps=7 format=3 uid="uid://btii2mmndnu6g"]

[ext_resource type="Script" path="res://menus/the_pit_level_select.gd" id="1_m1427"]
[ext_resource type="Texture2D" uid="uid://b81a60262iyhb" path="res://assets/levelbutton.png" id="2_dtcnu"]
[ext_resource type="Texture2D" uid="uid://cmm1e8ah7lpqa" path="res://assets/levelbuttonhover.png" id="3_32yar"]

[sub_resource type="Gradient" id="Gradient_vrnlu"]
offsets = PackedFloat32Array(0.980519, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_35jtk"]
gradient = SubResource("Gradient_vrnlu")
fill_from = Vector2(1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_sj2yf"]

[node name="ThePitLevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m1427")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 256.0
texture = SubResource("GradientTexture2D_35jtk")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 52.0
offset_right = 183.0
offset_bottom = 156.0
columns = 3

[node name="Button 1-1" type="PanelContainer" parent="GridContainer"]
layout_mode = 2

[node name="button_one" type="TextureButton" parent="GridContainer/Button 1-1"]
layout_mode = 2
texture_normal = ExtResource("2_dtcnu")
texture_hover = ExtResource("3_32yar")

[node name="Label" type="Label" parent="GridContainer/Button 1-1"]
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="Button 1-2" type="PanelContainer" parent="GridContainer"]
layout_mode = 2

[node name="button_two" type="TextureButton" parent="GridContainer/Button 1-2"]
layout_mode = 2
texture_normal = ExtResource("2_dtcnu")
texture_hover = ExtResource("3_32yar")

[node name="Label" type="Label" parent="GridContainer/Button 1-2"]
layout_mode = 2
text = "2"
horizontal_alignment = 1

[node name="Button 1-3" type="PanelContainer" parent="GridContainer"]
layout_mode = 2

[node name="button_three" type="TextureButton" parent="GridContainer/Button 1-3"]
layout_mode = 2
texture_normal = ExtResource("2_dtcnu")
texture_hover = ExtResource("3_32yar")

[node name="Label" type="Label" parent="GridContainer/Button 1-3"]
layout_mode = 2
text = "3"
horizontal_alignment = 1

[node name="Button 1-4" type="PanelContainer" parent="GridContainer"]
layout_mode = 2

[node name="button_four" type="TextureButton" parent="GridContainer/Button 1-4"]
layout_mode = 2
texture_normal = ExtResource("2_dtcnu")
texture_hover = ExtResource("3_32yar")

[node name="Label" type="Label" parent="GridContainer/Button 1-4"]
layout_mode = 2
text = "4"
horizontal_alignment = 1

[node name="Button 1-5" type="PanelContainer" parent="GridContainer"]
layout_mode = 2

[node name="button_five" type="TextureButton" parent="GridContainer/Button 1-5"]
layout_mode = 2
texture_normal = ExtResource("2_dtcnu")
texture_hover = ExtResource("3_32yar")

[node name="Label" type="Label" parent="GridContainer/Button 1-5"]
layout_mode = 2
text = "5"
horizontal_alignment = 1

[node name="Button 1-6" type="PanelContainer" parent="GridContainer"]
layout_mode = 2

[node name="button_six" type="TextureButton" parent="GridContainer/Button 1-6"]
layout_mode = 2
texture_normal = ExtResource("2_dtcnu")
texture_hover = ExtResource("3_32yar")

[node name="Label" type="Label" parent="GridContainer/Button 1-6"]
layout_mode = 2
text = "6"
horizontal_alignment = 1

[node name="levelerror" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 179.0
offset_right = 248.0
offset_bottom = 243.0
label_settings = SubResource("LabelSettings_sj2yf")
autowrap_mode = 3

[node name="Currentbesttime" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 224.0
offset_right = 257.0
offset_bottom = 256.0
label_settings = SubResource("LabelSettings_sj2yf")
vertical_alignment = 2
autowrap_mode = 3

[node name="BackButton" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 36.0
offset_bottom = 36.0

[node name="back_button" type="TextureButton" parent="BackButton"]
layout_mode = 2
texture_normal = ExtResource("2_dtcnu")
texture_hover = ExtResource("3_32yar")

[node name="Label" type="Label" parent="BackButton"]
layout_mode = 2
text = "<-"
horizontal_alignment = 1

[connection signal="mouse_entered" from="GridContainer/Button 1-1/button_one" to="." method="_on_button_one_mouse_entered"]
[connection signal="pressed" from="GridContainer/Button 1-1/button_one" to="." method="_on_button_one_pressed"]
[connection signal="mouse_entered" from="GridContainer/Button 1-2/button_two" to="." method="_on_button_two_mouse_entered"]
[connection signal="pressed" from="GridContainer/Button 1-2/button_two" to="." method="_on_button_two_pressed"]
[connection signal="mouse_entered" from="GridContainer/Button 1-3/button_three" to="." method="_on_button_three_mouse_entered"]
[connection signal="pressed" from="GridContainer/Button 1-3/button_three" to="." method="_on_button_three_pressed"]
[connection signal="mouse_entered" from="GridContainer/Button 1-4/button_four" to="." method="_on_button_four_mouse_entered"]
[connection signal="pressed" from="GridContainer/Button 1-4/button_four" to="." method="_on_button_four_pressed"]
[connection signal="mouse_entered" from="GridContainer/Button 1-5/button_five" to="." method="_on_button_five_mouse_entered"]
[connection signal="pressed" from="GridContainer/Button 1-5/button_five" to="." method="_on_button_five_pressed"]
[connection signal="mouse_entered" from="GridContainer/Button 1-6/button_six" to="." method="_on_button_six_mouse_entered"]
[connection signal="pressed" from="GridContainer/Button 1-6/button_six" to="." method="_on_button_six_pressed"]
[connection signal="button_down" from="BackButton/back_button" to="." method="_on_back_button_button_down"]
